# VIEB

./: .gitignore  CLAUDE.md  FIRST_USE.md  ML_PIPELINE_SUMMARY.md  PIPELINE_EXPLAINER.md  PI_MEETING.md  QUICKSTART.md  README.md  characterize.py  compare.py  example_usage.py  main.py  metadata.csv  outputs.txt  pyproject.toml  setup_dlc_training.py
VIEB-Carlos-2026-02-11/: config.yaml
labeled-data/20241113_Box_1_CFC_Day_0_(Context_A)_9009/: machinelabels-iter0.h5
ml/: __init__.py  analysis.py  anomaly_detection.py  clustering.py  feature_extraction.py  preprocessing.py  sequence_models.py
results/20241113_Box_1_CFC_Day_0_(Context_A)_9001/: analysis_report.txt  analysis_results.json  anomaly_bouts.csv  behavioral_states.csv  preprocessor.pkl  transition_matrix.csv
results/20241113_Box_1_CFC_Day_0_(Context_A)_9003/: analysis_report.txt  analysis_results.json  anomaly_bouts.csv  behavioral_states.csv  preprocessor.pkl  transition_matrix.csv
results/20241113_Box_1_CFC_Day_0_(Context_A)_9005/: analysis_report.txt  analysis_results.json  anomaly_bouts.csv  behavioral_states.csv  preprocessor.pkl  transition_matrix.csv
results/20241113_Box_1_CFC_Day_0_(Context_A)_9007/: analysis_report.txt  analysis_results.json  anomaly_bouts.csv  behavioral_states.csv  preprocessor.pkl  transition_matrix.csv
results/20241113_Box_1_CFC_Day_0_(Context_A)_9009/: analysis_report.txt  analysis_results.json  anomaly_bouts.csv  behavioral_states.csv  preprocessor.pkl  transition_matrix.csv
tracking/: base_tracker.py  test_dlc.py  visualize.py
(+1758 files in other folders)
