[project]
name = "vieb"
version = "0.1.0"
description = "Video Interpretor for Experimental Behavior"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Carlos Eckert"}
]

dependencies = [
    "numpy",
    "opencv-python",
    "scikit-learn"
]

[project.optional-dependencies]
tracking = [
    "deeplabcut"
]