[project]
name = "vieb"
version = "0.1.0"
description = "Video Interpretor for Experimental Behavior"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Carlos Eckert"}
]

dependencies = [
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "pandas==2.3.3",
    "matplotlib==3.8.4"
]

[project.optional-dependencies]
tracking = [
    "deeplabcut[gui]==3.0.0rc13",
    "tables==3.10.1",
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "napari==0.4.18",
    "vispy==0.13.0",
    "napari-console==0.1.4",
    "napari-deeplabcut==0.2.1.7",
    "PySide6==6.10.2",
    "numba==0.63.1",
    "imgaug==0.4.0",
    "filterpy==1.4.5",
    "scikit-image==0.25.2",
    "networkx==3.4.2",
    "ruamel.yaml==0.19.1",
    "timm==1.0.24",
    "huggingface_hub==1.4.1"
]

[tool.setuptools.packages.find]
include = ["ml*", "tracking*"]